<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/row_vd_filter_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_from_date"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/row_vd_filter_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_to_date"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_discount_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_from_amt"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_discount_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_to_amt"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_filter_group"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_filter_category"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_discount_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_discount"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_discount_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_discount_amount"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_discount_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_discount_price"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/row_vd_filter_exclude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_exclude"
            android:textStyle="bold"
            android:textColor="#000000" />

</LinearLayout>

</LinearLayout>